--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,12 @@
 
 /* Mobile Styles */
 @media screen and (max-width: 768px) {
+        /* Individual Tag Styles */
+        .project-card .tags span {
+            background: var(--tag-color); /* Light grey */
+            color: var(--text-color);
+        }
+
     .projects-container {
         display: grid;
         grid-template-columns: repeat(1, 1fr); /* 4 equal-width columns */
@@ -22,6 +28,7 @@
         width: 100%;
         height: auto;
         box-sizing: border-box; /* Include padding and borders in width/height */
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
         .project-card > a > img {
@@ -113,7 +120,7 @@
     .project-card p {
         font-size: 0.9vw;
         margin-top: 0.5vw;
-        color: var(--text-color); /* Medium grey */
+        color: var(--text-color);
     }
 
     .project-card .tags {
@@ -185,38 +192,38 @@
             padding: 1.5vw;
         }
 
-    /* Tags */
-    .tags-container {
-        text-align: center;
-        margin-bottom: 1vh;
-        margin-top: auto; /* Pushes tags to the bottom */
-        justify-content: flex-start; /* Align tags to the left */
-    }
+/* Tags */
+.tags-container {
+    text-align: center;
+    margin-bottom: 1vh;
+    margin-top: auto; /* Pushes tags to the bottom */
+    justify-content: flex-start; /* Align tags to the left */
+}
 
-    .tag.active,
-    .tag:hover {
-        background: #00b57f; /* Green accent for active/hovered tags */
-        color: var(--text-color);
-    }
+.tag.active,
+.tag:hover {
+    background: #00b57f; /* Green accent for active/hovered tags */
+    color: var(--text-color);
+}
 
-    /* General Tag Styles */
-    .tags {
-        display: flex;
-        gap: 1px;
-        flex-wrap: wrap;
-    }
+/* General Tag Styles */
+.tags {
+    display: flex;
+    gap: 1px;
+    flex-wrap: wrap;
+}
 
-    .tag {
-        display: inline-block;
-        background: var(--tag2-color);
-        padding: 0.5vw .7vw; /* tb - rl*/
-        margin: 0.4vw;
-        border-radius: 0.5vw;
-        color: var(--text-color);
-        font-size: .9rem;
-        font-weight: bold;
-        transition: 0.3s ease, color 0.3s ease;
-    }
+.tag {
+    display: inline-block;
+    background: var(--tag2-color);
+    padding: 0.5vw .7vw; /* tb - rl*/
+    margin: 0.4vw;
+    border-radius: 0.5vw;
+    color: var(--text-color);
+    font-size: .9rem;
+    font-weight: bold;
+    transition: 0.3s ease, color 0.3s ease;
+}
 
     /* Project Title Image */
     /*.project-title-image {
